# tiingo_data_pull

./: .gitignore  README.md  all_tickers.json  pyproject.toml  requirements.txt  run.py  setup.py  sonar-project.properties
.github/: copilot-instructions.md
.github/workflows/: build.yml  codeql.yml  python-app.yml  sonarcloud.yml  sonarqube.yml
docs/: codeql-management.md
scripts/: install.sh
src/: config.py  pipeline.py  tiingo_client.py
src/tiingo_data_pull/: __init__.py  cli.py
src/tiingo_data_pull.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
src/tiingo_data_pull/clients/: __init__.py  drive_client.py  notion_client.py  tiingo_client.py
src/tiingo_data_pull/integrations/: __init__.py  google_drive.py  notion_client.py
src/tiingo_data_pull/models/: __init__.py  price_bar.py
src/tiingo_data_pull/services/: __init__.py  pipeline.py
src/tiingo_data_pull/utils/: __init__.py  batching.py  file_io.py
tests/: conftest.py  test_batching.py  test_cli.py  test_notion_client.py  test_pipeline_filter.py  test_standalone_pipeline.py  test_tiingo_client_module.py  test_tiingo_client_threading.py
